FLY wire David/force-app/main/default/objects/OPP_ARR_EDU_Domestic_Cost_Rate__mdt/OPP_ARR_EDU_Domestic_Cost_Rate__mdt.object-meta.xml
<CustomObject>
    <label>OPP ARR EDU Domestic Cost Rate</label>
    <pluralLabel>OPP ARR EDU Domestic Cost Rates</pluralLabel>
</CustomObject>