FLY wire David/force-app/main/default/objects/OPP_ARR_EDU_Domestic_Cost_Rate__mdt/fields/Cost_Rate__c.field-meta.xml
<CustomField>
    <fullName>Cost_Rate__c</fullName>
    <label>Standard Cost Rate</label>
    <precision>8</precision>
    <required>true</required>
    <scale>6</scale>
    <type>Number</type>
</CustomField>