FLY wire David/force-app/main/default/objects/OPP_ARR_EDU_Domestic_Cost_Rate__mdt/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <label>Country</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>