FLY wire David/force-app/main/default/objects/OPP_ARR_EDU_Domestic_Cost_Rate__mdt/fields/Country_ISO__c.field-meta.xml
<CustomField>
    <fullName>Country_ISO__c</fullName>
    <label>Country ISO Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>