FLY wire David/force-app/main/default/objects/OPP_ARR_EDU_Domestic_Cost_Rate__mdt/fields/Payment_Method__c.field-meta.xml
<CustomField>
    <fullName>Payment_Method__c</fullName>
    <label>Payment Method</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>